--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+* {
+	box-sizing: border-box;
+}
 body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
@@ -12,6 +15,10 @@ code {
 
 html {
 	background-color: #212646;
+	padding: 0px;
+	margin: 0px;
+	overflow-y: scroll;
+	width: 100%;
 }
 
 #root {
